<?xml version="1.0"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.santiagolizardo.neocommander</groupId>
	<artifactId>NeoCommander</artifactId>
	<version>1.4.12</version>
	<packaging>jar</packaging>
	<name>NeoCommander</name>
	<url>https://github.com/santiagolizardo/neocommander</url>
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>
	<build>
		<plugins>
			<plugin>
				<groupId>com.googlecode.gettext-commons</groupId>
				<artifactId>gettext-maven-plugin</artifactId>
				<version>1.2.4</version>
				<executions>
					<execution>
						<id>convert-po-class</id>
						<phase>compile</phase>
						<goals>
							<goal>dist</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<poDirectory>${project.build.sourceDirectory}/../resources/com/santiagolizardo/madcommander/resources/languages</poDirectory>
					<targetBundle>com.santiagolizardo.madcommander.resources.languages.Translator</targetBundle>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <release>21</release>
                    <compilerArgs>
                        <arg>-Xlint:deprecation</arg>
                        <arg>-Xlint:unchecked</arg>
                    </compilerArgs>
                    <source>21</source>
                    <target>21</target>
                </configuration>
			</plugin>
			<plugin>
				<artifactId>maven-assembly-plugin</artifactId>
				<executions>
					<execution>
						<id>make-assembly</id>
						<phase>package</phase>
						<goals>
							<goal>single</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<archive>
						<manifest>
							<mainClass>com.santiagolizardo.madcommander.Main</mainClass>
						</manifest>
					</archive>
					<descriptorRefs>
						<descriptorRef>jar-with-dependencies</descriptorRef>
					</descriptorRefs>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>versions-maven-plugin</artifactId>
				<version>2.7</version>
			</plugin>
		</plugins>
	</build>
	<dependencies>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.13.2</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>commons-io</groupId>
			<artifactId>commons-io</artifactId>
			<version>2.11.0</version>
		</dependency>
		<dependency>
			<groupId>com.googlecode.gettext-commons</groupId>
			<artifactId>gettext-commons</artifactId>
			<version>0.9.8</version>
		</dependency>
	</dependencies>
</project>
